--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.3"
