--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^3.3.7",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
