--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --hot"
+    "dev": "webpack-dev-server --open --port 3000 --hot --host 192.168.1.143"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +37,7 @@
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "webpack": "^3.12.0",
