--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.3"
   }
